k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-backend
  namespace: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: dotnet-backend
          image: noufawal0311/dotnet-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
